--- a/grid/weekly_schedule.css
+++ b/grid/weekly_schedule.css
@@ -3,8 +3,8 @@ body {
     background: white;
     margin: 0;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto;
     align-items: center;
 }
 
